--- a/main.tex
+++ b/main.tex
@@ -75,8 +75,8 @@ The later enters the Topological axis in liaison with the canonical Galaxy Group
 \markboth{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}{\thepage}
 \markright{Bizouard, Flawisky, Gayral, Grosmann, Gueroult, Kotov, Sanchez, Veysseyre. Back to Cosmos}
 
-\chapter{Introduction}
-\section{Introduction: Deterministic Computation and Hierarchy Principle}
+\section{Introduction}
+\subsection{Introduction: Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: a, p, and $a_{G}$, are sufficient to explain the main structures of the world [1]. Two of them are precisely measured: the electric constant a $\approx$ 137.035999139(31) measured with 0.23 ppb precision and the proton-electron mass ration p $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant a$_G\!$ was neither well defined nor measured, due to the relatively large imprecision on G measurement (10$^{-4}\!$).
 
 One can read [1]: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on a and aG from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics.... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
@@ -99,8 +99,8 @@ This article is separated in 3 sections, corresponding to 3 classes of mathemati
 
 The first section explains why, in the Computation Hypothesis, large numbers are necessary, so justifying at last the Cosmos vastness. In particular,  the most famous prime number of Hstory 2$^{127}\!$-1, and the Eddington's Large number = 136 $\times$ 2$^{256}\!$  are empathized. The second section will study the role of intermediate mathematical constants such as the Eddington's constant 137. The third Section involves mathematical constants, such as $\pi$ and $\gamma$.  By contrast, the optimal computation basis e is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2n/4), the secondary basis being 2, the simplest basis of all.
 
-\chapter {Chapter1}
-\section {Internal Fine Tuning and Canonical Large Numbers}
+\section {Chapter1}
+\subsection {Internal Fine Tuning and Canonical Large Numbers}
 \markright{Your Full Names.  Short Title of Your Paper}
 
 The most famous fine tuning implies cosmic quantities, but this is awkwardly called the `Double
@@ -184,7 +184,7 @@ another evacuation mechanism must occur: it would be the role of massive black h
 \label{fig:figure_label}
 \end{figure}
 
-\section{Cosmic Holography, Toponic Quantification and Cosmos vastness}
+\subsection{Cosmic Holography, Toponic Quantification and Cosmos vastness}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
@@ -268,12 +268,12 @@ The mathematical continuity being excluded by the above Calculative Principle, t
 time $$\lambdabar_{M} /c = 1.33 \times 10^{-104}s$$ is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 
-\section{Evidence for Tachyonic Flickering Space-Time-Matter}
+\subsection{Evidence for Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 following considerations and observations confirm this hypothesis.
 
-\section{Single Electron Cosmology}
+\subsection{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
@@ -301,7 +301,7 @@ m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
 \end{equation} 
 The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
 
-\section{The Kotov Cosmic Coherent Oscillation Period}
+\subsection{The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
@@ -328,7 +328,7 @@ value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the
 \end{equation}
 This value will be confirmed, in the ppb range, in Section III.
 
-\section{The omnipresence of the Kotov cycle in astrophysics}
+\subsection{The omnipresence of the Kotov cycle in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K2} )^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -426,7 +426,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \end{figure}
 
 
-\section{The Tifft, Arp and Pioneer effects}
+\subsection{The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. If one considers
 velocity $v_{1}$ as being compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{fm1}.
@@ -437,7 +437,7 @@ density $\rho_{c}$ .
 Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$. It fits with
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
-\section{The intriguing Logic of Prospective Dimensional Analysis}
+\subsection{The intriguing Logic of Prospective Dimensional Analysis}
 
 Physical relations use principally physical quantities as monomials of type $Q = M^{x} L^{y} T^{t}$ , where
 the three categories, M, L and T are Mass, Length and Time measurements, and where the exponents are
@@ -511,10 +511,9 @@ t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
 \end{equation}
 confirms the above Planck wall breakdown.
 
-\chapter{chapter2}
 \section{Fine-tuning with intermediate Mathematical Constants}
 \markright{Your Full Names.  Short Title of Your Paper}
-\section{The Arithmetical Monster Prime 137}
+\subsection{The Arithmetical Monster Prime 137}
 
 The pertinence of our above simple polynomial relations are not admitted by the standard
 community, for instance arguing that since the proton is composite, its mass cannot enter simple
@@ -549,7 +548,7 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 $ln137/ln(a/137) \approx (2+135/d_{e})^{2}$
 meaning the ratio a/137 acts as a canonical ratio.
 
-\section{The Arithmetical Logic : Holic Principle and Topological Axis}
+\subsection{The Arithmetical Logic : Holic Principle and Topological Axis}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
 simplest one is $T^{2} = L^{3}$ , where T is a time ratio and L a length one, resolving, since 2 and 3 are co-
@@ -564,7 +563,7 @@ dimension n = 30, the natural extension of the above :
 $T^{2} = L^{3} = M^{5} = n^{30}$ where M is the mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, concerning only the apparent world. The entire Holic
 Principle, concerning also the quantum vacuum, would involve a term $F^{7}$ , and of dimension 210.
 
-\section{The retention of Information}
+\subsection{The retention of Information}
 
 The Grandcosmos holographic reduction radius $R\prime$ shows itself an overwhelming holographic
 relation with the CMB Wien wavelength $l_{CMB}$ , to $0.01\%$:
@@ -581,7 +580,7 @@ Time, specially the non-locality phenomena, they agree for complete determinism,
 Copenhagen statistical interpretation. The hidden variables exist really: the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
-\section{Ubiquity of $a^{a}$}
+\subsection{Ubiquity of $a^{a}$}
 
 The famous Lucas-Lehmer primality test uses the series of whole numbers $N_{n+1} = N_{n}^{2}-2$,
 starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging to the Diophantine generators $u_{n} = \sqrt{n} + \sqrt{(n+1)}$., whose entire powers are close to whole numbers. One shows that $N_{n} \approx u_{3}^{(2^{q})}$, and for q = 9:
@@ -605,14 +604,14 @@ defining a to 0.3 ppm. So the number a establishes a connexion between $u_{1}$ a
 simplest arithmetics generators. Moreover a has been connected [3] to the canonical $e^{1/e}$ and the
 5th optimal musical scale with 306 notes. This opens a new research in pure mathematics.
 
-\section{Fine-tuning with basic mathematical constants}
+\subsection{Fine-tuning with basic mathematical constants}
 \markright{Your Full Names.  Short Title of Your Paper}
 Since some dimensionless physical parameters are very precisely measured, it seems obvious to look for
 relations with mathematical constants different from the optimal basis e, such as $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\section {Wyler's approach}
+\subsection {Wyler's approach}
 
 Armand Wyler singularized a value $a_{W}$ approaching a to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching p to 18.824 ppm.
@@ -622,7 +621,7 @@ $$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
 One observe that the rejection of Wyler's work, due to a non-perfect formula for the p and a values, is a new
 manifestation of the general neglectance of the Hierarchical Principle.
 
-\section {The Archimedes constant $\pi$ as a calculation basis}
+\subsection {The Archimedes constant $\pi$ as a calculation basis}
 
 The above Lenz-Wyler formula has a geometrical interpretation: $6\pi^{5}$ is the product area-
 volume of a square of radius $\pi$. Now, the value f{26} of the Topological Function for the String
@@ -643,7 +642,7 @@ scale e, encountered all along above, and confirmed below.
 One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: $a \approx 4\pi^{3} + \pi^{2} + \pi$
 Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\section {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
+\subsection {The Euler constant e confirmed as the optimal calculation basis for the Grandcosmos}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjunction:
@@ -653,7 +652,7 @@ $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
 the occidental 12 tones scale.
 
-\section {The electroweak constant mathematical fine tuning}
+\subsection {The electroweak constant mathematical fine tuning}
 
 The Particle standard model achieved the unification between electromagnetism and weak
 nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
@@ -664,7 +663,7 @@ a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
 $$\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi$$
 see below how this formulae simplifies again by using the Atiyah Constant.
 
-\section {The Muon and Tau fine tuning}
+\subsection {The Muon and Tau fine tuning}
 
 Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
@@ -680,14 +679,14 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to $10^{-7}$:
 $$1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}$$
 confirming the central role of the Moonshine Monster dimension [23] D = 196883.
 
-\section {The Intermediate Bosons mathematical fine tuning}
+\subsection {The Intermediate Bosons mathematical fine tuning}
 
 The computer indicates, with $n \approx 1838.68366089(17)$ the neutron/electron mass ratio:
 $$W \approx \gamma \cdot a \cdot 137^{2} / 3\pi d^{e}$$
 $$Z \approx ap^{2} \cdot \pi^{4} / 137 \cdot d_{e}^{n}$$
 Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$$ matches G value in the ppb range.
 
-\section {The Direct Gravitational Constant mathematical fine-tuning}
+\subsection {The Direct Gravitational Constant mathematical fine-tuning}
 
 Computer analysis shows the following ppb precise extension for the deviation between $2^{127}$ and
 $a_{G}$ ,
@@ -700,7 +699,7 @@ the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
-\section {The Atiyah constant}
+\subsection {The Atiyah constant}
 
 Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His ultimate
 findings in his domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplified term [24]. Indeed this
@@ -727,7 +726,6 @@ $$a - e^{\pi} \approx e^{\pi} lna \approx j = 8\pi^{2} /ln2 \approx \Theta_{mam}
 where j is the Sternheimer scale factor, central in Theoretical Biology [3], being, in particular the
 Temperature ratio Mammal/CMB.
 
-\chapter {Chapter3}
 \section {Discussion}
 \markright{Your Full Names.  Short Title of Your Paper}
 
@@ -787,8 +785,8 @@ only manifestations of the general (Field and flickering Matter) wave propagatio
 transform properties. Thirdly, in cosmology, the recourse to the Multiverse conundrum.
 \end{itemize}
 
-\chapter {Conclusions}
-\section {Simplicity at work}
+
+\section {Conclusions Simplicity at work}
 \markright{Your Full Names.  Short Title of Your Paper}
 
 The application of the old direct scientific method, looking for fine tuning between physical
