--- a/main.tex
+++ b/main.tex
@@ -230,7 +230,7 @@ Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exa
 of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
-S_{BH}\, = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}
+S_{BH}\, = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m} \cdot R}{\lambdabar_{m}}
 \end{equation}
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
@@ -860,6 +860,12 @@ to one of us; `While I appreciate your efforts in physics, please do not use my 
 other than referencing a published paper`. We salute his modesty, but his introduction of the rather
 unexpected Euler-Mascheroni constant in the fine-tuning research has considerably helped our task
 of proving the existence of a fundamental theory.
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm,height=3cm]{https://raw.githubusercontent.com/LaGuer/doc-latex/master/figures/triaxis.jpg}
+\caption{Tri-axis superframe structure}
+\end{figure}
 
 \section{Citations}
 \markright{Your Full Names.  Short Title of Your Paper}
