--- a/main.tex
+++ b/main.tex
@@ -863,7 +863,7 @@ of proving the existence of a fundamental theory.
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=10cm,height=3cm]{https://raw.githubusercontent.com/LaGuer/doc-latex/master/figures/triaxis.jpg}
+\includegraphics[width=10cm,height=3cm]{https://raw.githubusercontent.com/LaGuer/doc-latex/master/figures/triaxis.png}
 \caption{Tri-axis superframe structure}
 \end{figure}
 
