--- a/main.tex
+++ b/main.tex
@@ -863,7 +863,7 @@ of proving the existence of a fundamental theory.
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=8cm,height=8cm]{./figures/triaxis.png}
+\includegraphics[width=8cm,height=6.5cm]{./figures/triaxis.png}
 \caption{Tri-axis superframe structure}
 \end{figure}
 
@@ -1004,6 +1004,17 @@ incommensurabilité cubique est sur les groupes de Bravais de sa famlille crista
 l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, p. 349-352 (1987)
 
 \bibitem{33} Atiyah M., private communication (December 2018)
+
+\bibitem{34} Atiyah M., private communication (December 2018)
+
+\bibitem{35} {article,
+author = {Gaudeau de Gerlicz, Claude and Antoine, Mathias and Bobola, Philippe and Flawisky, Nicolas and Hebras, Xavier and Mundedi, Musa},
+year = {2013},
+month = {09},
+pages = {336-340},
+title = {Emergence of a New Quantum Mechanics by Multivalued Logic},
+doi = {10.1142/9789814504782_0036}
+}
 
 \end{thebibliography}
 \vspace*{-6pt}
