--- a/main.tex
+++ b/main.tex
@@ -1013,7 +1013,7 @@ year = {2013},
 month = {09},
 pages = {336-340},
 title = {Emergence of a New Quantum Mechanics by Multivalued Logic},
-doi = {10.1142/9789814504782_0036}
+doi = {10.1142/9789814504782-0036}
 }
 
 \end{thebibliography}
