--- a/main.tex
+++ b/main.tex
@@ -87,9 +87,9 @@ But, as about 30 dimensionless parameters appear as 'free parameters' in the Par
 
 The present article shows that \textit{Physics is a part of mathematics}, refuting the Multiverse Hypothesis by precise fine-tuning between main physical and biological parameters, involving main mathematical constants in particle physics: $\pi$,  e and $\gamma$, the Euler-Mascheroni constant. Also, these relations confirm the Super-string Theory and rehabilitates the tachyonic Bosonic String Theory.
 
-\textit{A decisive point of physics is the energy conservation.} Theorists associate it with time uniformity, but a more logical explication is that cosmos is a computer, so Intelligent Life receive a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions : why do we ask questions ? We propose that the parameters are optimal basis in a deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of Mammals and main molecules [3 and reference therein].
+\textit{A decisive point of physics is the energy conservation.} Theorists associate it with time uniformity, but a more logical explication is that cosmos is a computer, so Intelligent Life receive a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions : why do one asks questions ? One proposes that the parameters are optimal basis in a deterministic Computing Cosmos, and they appear indeed in DNA characteristics, and three-point temperatures of Mammals and main molecules [3 and reference therein].
 
-\textit{This reestablishes the Laplace determinism}, involving non-local hidden variables, which identify with the Cosmos, so rejecting the Copenhague statistical interpretation of quantum mechanics.
+\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which identify with the Cosmos, so rejecting the Copenhagen statistical interpretation of quantum mechanics.
 
 The fact that three parameters, out of about 30, are so clearly emerging means that Physics, and more generally Science, is hierarchic: \textit{one can progress in science without knowing the details of the underlying fundamental theory.}
 
@@ -118,7 +118,7 @@ value of 9\%.
 Let us associate the visible universe of mass M with a matter-wave, of wavelength $\lambdabar_{M} = \hbar /Mc = 4
 10^{-96} m$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$ , The Topological Axis illustrates the function $f{n + 4} = f^{2}{n}$
-and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_e )^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
+and results from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2} $, followed by $l_{macro} /\lambdabar_{e} \sim
 (\lambdabar_{e} /l\prime_{micro} )^{2}$ :
 $$
 \begin{array}{ll}
@@ -153,7 +153,7 @@ which is the simplest case of Eddington's statistical theory [2]. The position o
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , one obtain the double relation:
-$$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e} )} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
+$$R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e})} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
@@ -195,7 +195,7 @@ critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle , only devoted to 3D application \cite{bousso}[6]:
 $S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}$
-where $l_{P} = (Ghbar/c^3 )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
+where $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
@@ -251,7 +251,7 @@ background, there is a gap compatible with $(H/p G ) 2 p/6\pi_{5} $, where $p_{G
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
 => $\Theta_{CMB} = 2.725820805 K$ which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Chapter 3). Recall
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section 3). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
 The critical mass is related to the elementary masses by:
@@ -265,7 +265,11 @@ Another shortcoming of this theory is that it does not define any inertial frame
 Doppler dissymmetry of the cosmic background indicates the speed of our local group of galaxies:
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 The mathematical continuity being excluded by the above Calculative Principle, the associated
-time $$\lambdabar_{M} /c = 1.33 \times 10^{-104}s$$ is the new candidate for the `Chronon`, the `quantum of time`, so the
+time 
+\begin{equation}
+\lambdabar_{M} /c = 1.33 \times 10^{-104}s
+\end{equation}
+is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
 
 \subsection{Evidence for Tachyonic Flickering Space-Time-Matter}
@@ -278,12 +282,16 @@ following considerations and observations confirm this hypothesis.
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
-$$\frac{\sum(1/n)}{\sum(1/n^{2})} = a\prime$$
-with the sum running from 2 to $R_{1} /\lambdabar_{e}$ . This implies:
+\begin{equation}
+\frac{\sum(1/n)}{\sum(1/n^{2})} = a\prime
+\end{equation}
+with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a\prime + 1 - \gamma) \approx 15.77465 Gly$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127}/2$ , and $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
-$R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
+\begin{equation}
+R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}
+\begin{equation}
 
 Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of R by $R_{1}$ is about $4\pi$ , the canonical form for $\sqrt{a}$, the deviation being compatible
@@ -307,11 +315,15 @@ The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriousl
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
-\hbar 3 /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
+\hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
 $$t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}$$
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
-292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
-1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$\cite{Pdc}. This introduces the product of two area speeds, confirming the
+292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}$ , itself tied to the weak force constant 
+\begin{equation}
+G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
+1.4358509(7) \times 10^{-62} Joule \cdot m^{3}
+\end{equation}
+\cite{Pdc}. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
 (\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
@@ -449,9 +461,13 @@ Arithmetics, founded on prime numbers, but limited to the three M, L and T categ
 R/c$, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
 holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
 40 ppm:
-$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R_{GC} /\lambdabar_{e} )$$
+\begin{equation}
+ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R_{GC} /\lambdabar_{e} )
+\end{equation}
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
-$$ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e - 1/2a$$
+\begin{equation}
+ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e - 1/2a
+\end{equation}
 This is a dramatic geometrical confirmation for the visible Universe - Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
@@ -470,10 +486,18 @@ believed to be the single mandatory foundation of Space-Time. The warning of Poi
 discoverer of Relativity: `use 4D space but do not confound Space and Time` has long been
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
-$$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
-but it took 9 years to get the current article published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
-10^{-27} kg \cdot m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
+\begin{equation}
+l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2
+\end{equation}
+but it took 9 years to nurture this publication [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product 
+\begin{equation}
+m_{e} \cdot m_{p} \cdot m_{H}
+\end{equation}. Moreover, the above critical condition
+links the time $t = \frac{R}{c}$ and the mean mass density by the c-free formula:
+\begin{equation}
+\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times 10^{-27} kg \cdot m^{-3}
+\end{equation}
+, So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that $\rho_{c}$ must be considered as a fundamental constant. One writes:
 \begin{equation}
 t{\hbar,\rho_{c} ,G}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}
@@ -502,9 +526,13 @@ where $O_{M}$ is the cardinal order of the Monster Group, the largest of the 26 
 suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge
 between apparently no-connected mathematical theories \cite{Borcherds}[17]. The simplest interpretation of T is the
 cosmic period of all events, in a perfectly deterministic and periodic Cosmos.
-Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: $$t{G, m_{e} , g_{PN} }
-= (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}$$ , where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
-$$t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}$$
+Now, introducing the above Pioneer abnormal deceleration $g_{PN}$ , one gets the time: 
+\begin{equation}
+t{G, m_{e} , g_{PN} } = (Gm_{e} /g_{PN}^{3} )^{1/4} = (t_{PN}^{3} t\prime_{e} )^{1/4}
+\end{equation}, where $t_{PN} = c/g_{PN}$ and $t\prime_{e} = Gm_{e} /c^{3}$ . This time is compatible with:
+\begin{equation}
+t{G, m_{e} , g_{PN} } = t_{K} /(F/a)^{2}
+\begin{equation}
 where the above Tifft factor F/a appears. The implication of the time 
 \begin{equation}
 t\prime_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s
@@ -526,8 +554,12 @@ century, but apparently nobody signaled it has a fundamental mathematical proper
 Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
 series: 3,11,5,137,7,11, showing a symmetry between the 11 supergravity dimensions and the 4 of
 space-time. Indeed:
-$$137 = 11^{2} + 4^{2}$$
-$$\frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}$$
+\begin{equation}
+137 = 11^{2} + 4^{2}
+\end{equation}
+\begin{equation}
+\frac{11}{4} = (\frac{\lambda_{CNB}}{\lambda_{CMB}})^{3}
+\end{equation}
 Since Riemann series are tied to the prime number distribution, it is strange that mathematicians
 have not point out the primes appearing in the Harmonic series, since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. As ancient Egyptian used
@@ -541,7 +573,9 @@ Eddington's Theory was rejected as soon as a appeared to be different from 137. 
 following shows that 137 plays a central role in fine-tuning analysis. One may interpret 137 + 1 as
 the sum of the numbers of dimensions in the Topological Axis [3], taking into account the double
 point for the superstring value n = 10, and the remarkable sum:
-$$\sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}$$
+\begin{equation}
+\sum_{k=7}^{k=0}(2 + 4 k ) = 2^{7}
+\end{equation}
 So $137 = 2^{7} - 1 + 3 + 7$, the Hierarchic Combination form. But this appears also as 137 = 135 + 2,
 with the dimension 2 of the String patent. In particular, one obtains the value $a \approx 137.035999119$
 compatible with measurement $a \approx 137.035999139(31)$ in:
@@ -588,7 +622,9 @@ $u_{3}^(2^9) \approx (2(a^{2} + 2\sqrt{\mu}))^{64} \approx a^{a}$
 defining a to 39 ppm, where $\mu$ is the mass ratio muon/electron and the main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
-$$O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^2}$$
+\begin{equation}
+O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \frac{\hbar Gc^{5}}{E_{Ryd}^{2}}
+\end{equation}
 Indeed, by respect to the Chronon $\lambdabar_M /c \approx t_{\Theta} = 1.1333 \times 10{-104} s$, the number ot quantum events in
 the above Supercycle period $T/ t_{\Theta}$ shows, with $\delta = R\prime/R$, to 0.4\%, 2\% and 0.6\%:
 $$\delta \times T/t_{\Theta} \approx (e^{e})^{137} \approx O_{M}^{3} \approx 496^{60}$$
@@ -646,7 +682,9 @@ Recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following
 conjunction:
-$$ f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2}) $$
+\begin{equation}
+f{e^{2}} = exp(2^{e^{2+\frac{1}{2}}}) \approx exp(e^{2e}+e^{2})
+\end{equation}
 The supplementary term $exp(e^{2})$ is close to $a^{3/2}$. Note that $e^{2}$ has the following musical property:
 $$(3/2)^{5} \approx (4/3)^{7} \approx (5/4)^{9} \approx (6/5)^{11} \approx ... \approx (1+1/n)^{2n+1} \implies e^{2}$$
 a series converging faster than the Euler's one $$(1+\frac{1}{n})^{n} \implies e$$. The first two terms define
@@ -657,7 +695,9 @@ the occidental 12 tones scale.
 The Particle standard model achieved the unification between electromagnetism and weak
 nuclear force. One ought to look for the relation involving a, 137, $a_{w}$ and the mathematical constants. One
 immediately gets:
-$$a_{w} \approx (2\gamma \cdot 137 \cdot a/\pi)^3$$
+\begin{equation}
+a_{w} \approx (2\gamma \cdot 137 \cdot a/\pi)^{3}
+\end{equation}
 Now, by introducing the featured length $$l_{eF} = (\frac{G_{F}}{m_{e} \cdot c^{2}})^{1/3}$$ , the electroweak constant appears as
 a cube $a_{w} \approx (\frac{\lambdabar_{e}}{l_{eF}}^{3}$ , yielding to:
 $$\frac{\lambdabar}{l_{eF}} \approx 2\gamma \cdot 137 \cdot a/\pi$$
@@ -665,7 +705,9 @@ see below how this formulae simplifies again by using the Atiyah Constant.
 
 \subsection {The Muon and Tau fine tuning}
 
-Admitting the above relation, this defines $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$, inside its $2.5 10^{-7}$
+Admitting the above relation, this defines \begin{equation} 
+F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
+\end{equation}, inside its $2.5 10^{-7}$
 indetermination. Another fine-tuning ties the muon, proton and Hydrogen masses: $\frac{E_{F}}{m_{e} \cdot c^{2}} \approx
 m_{\mu}^{2} \sqrt{(m_{p} \cdot m_{H})}/am_{e}^{3}$ . It yields to a muon mass relative to electron $\mu = 206.7682869$, inside its
 $2 \times 10^{-8}$ measurement range.
@@ -690,9 +732,13 @@ Considering the above values, the relation $$R/\sqrt(\lambdabar_{p} \lambdabar_{
 
 Computer analysis shows the following ppb precise extension for the deviation between $2^{127}$ and
 $a_{G}$ ,
-$$(2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}$$
+\begin{equation}
+(2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}
+\end{equation}
 leading to:
-$$(aa_{w}^{1/2} /\pi d_{e})^{1/3} \approx 4\pi n\prime/ \gamma^{a}$$
+\begin{equation}
+(aa_{w}^{1/2} /\pi d_{e})^{1/3} \approx 4\pi n\prime/ \gamma^{a}
+\end{equation}
 where $n\prime = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
 in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to $3.4 \times 10^{-6}$ . Since the fractional
@@ -704,9 +750,15 @@ incomplete and that Nature uses rational approximations for $\pi$.
 Michael Atiyah was a precursor in the quest for unicity of Mathematics and Physics. His ultimate
 findings in his domain introduced the constant $$\Gamma = \gamma a/\pi$$, as a simplified term [24]. Indeed this
 constant $\Gamma$ clarifies some of the expressions given below:
-$$a_{w} = (137 \times 2 \Gamma)^{3}$$
-$$W \approx 137^{2} \Gamma / 3d_{e}$$
-$$( \Gamma\sqrt{a_{w}/\gamma d_{e})}^{1/3} \approx 4n\prime / \Gamma$$
+\begin{equation}
+a_{w} = (137 \times 2 \Gamma)^{3}
+\end{equation}
+\begin{equation}
+W \approx 137^{2} \Gamma / 3d_{e}
+\end{equation}
+\begin{equation}
+( \Gamma\sqrt{a_{w}/\gamma d_{e})}^{1/3} \approx 4n\prime / \Gamma
+\end{equation}
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 $$ap_{G} / \pi \sqrt(pH) \approx (n_{F}/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F$$
 Now, as recalled before in the Holic Principle, the exponents represents the number of
@@ -1005,15 +1057,13 @@ l'espace euclidien à six dimensions. C.R. Acad. Sci. Paris, t. 305, Série II, 
 
 \bibitem{33} Atiyah M., private communication (December 2018)
 
-\bibitem{34} Atiyah M., private communication (December 2018)
-
-\bibitem{35} {article,
-author = {Gaudeau de Gerlicz, Claude and Antoine, Mathias and Bobola, Philippe and Flawisky, Nicolas and Hebras, Xavier and Mundedi, Musa},
-year = {2013},
-month = {09},
-pages = {336-340},
-title = {Emergence of a New Quantum Mechanics by Multivalued Logic},
-doi = {10.1142/9789814504782-0036}
+\bibitem{34} {article,
+author {Gaudeau de Gerlicz, Claude and Antoine, Mathias and Bobola, Philippe and Flawisky, Nicolas and Hebras, Xavier and Mundedi, Musa},
+year {2013},
+month {09},
+pages {336-340},
+title {Emergence of a New Quantum Mechanics by Multivalued Logic},
+doi {10.1142/9789814504782-0036}
 }
 
 \end{thebibliography}
